--- a/index.html
+++ b/index.html
@@ -8,18 +8,50 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
             <ul>
                 <li>Portfolio</li>
                 <li>Blogs</li>
-                <li><button>Hire</button></li>
+                <li><button class="btn-primary">Hire</button></li>
             </ul>
         </nav>
+        <!-- banner -->
+        <div class="banner">
+            <div>
+                <h3 class="banner-sub-title">Hi I am</h3>
+                <h1 class="banner-title">Zihadul Talukder</h1>
+                <p class="banner-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem, molestias facilis itaque, fuga esse dolorem doloribus praesentium, soluta magnam omnis quam amet? Accusantium, ut expedita.</p>
+                <button class="btn-primary">Download CV</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat esse, cum ratione, sapiente iure voluptatem, architecto consequatur dolores magnam impedit itaque? Facere rerum doloribus minus molestiae ipsa voluptate aut quasi unde recusandae sed fugiat officiis, eligendi, cum, cumque quos facilis tenetur itaque? Soluta assumenda eligendi autem sed voluptatem hic iusto!</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-description">Zihadul Talukder</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-description">Zihadul@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Specialty:</p>
+                    <p class="info-description">Web Dev</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Location:</p>
+                    <p class="info-description">Dhaka, BD</p>
+                </div>
 
+            </div>
+        </section>
     </main>
     <footer>
 
