--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
             <h3 class="section-title">What I Do</h3>
             <div class="skills-container">
                 <div class="skill">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanilla JavaScript</p>
                     <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque laudantium, vero sed beatae dolore nostrum.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/react.png" alt="">
+                    <img src="images/icons/react.png" alt="">
                     <p class="skill-title">React</p>
                     <p class="skill-description">Maxime enim neque quos sed harum! A blanditiis consequuntur laudantium odit hic id unde molestiae.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/mongo.png" alt="">
+                    <img src="images/icons/mongo.png" alt="">
                     <p class="skill-title">Mongodb</p>
                     <p class="skill-description">Harum fugit atque tempore voluptate illum architecto, molestiae accusamus nihil commodi modi numquam laborum iure?</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/nodejs.png" alt="">
+                    <img src="images/icons/nodejs.png" alt="">
                     <p class="skill-title">Node JS</p>
                     <p class="skill-description">Maxime expedita nobis inventore odio ad odit iure dignissimos! Maiores, rem dolorem. Doloremque, laudantium numquam?</p>
                 </div>
