--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
                 <h3 class="section-title">Let's Connect</h3>
                 <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
                 <a href="">
-                    <img src="/images/icons/facebook.png" alt="">
+                    <img src="images/icons/facebook.png" alt="">
                 </a>
                 <a href="">
-                    <img src="/images/icons/insta.png" alt="">
+                    <img src="images/icons/insta.png" alt="">
                 </a>
                 <a href="">
-                    <img src="/images/icons/twitter.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
                 </a>
             </div>
             <div>
